--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pipenv
+          pip install poetry
+          poetry install --dev
       - name: Test with pytest
-        run: |
-          pipenv install --dev
-          pipenv run pytest --mypy --pylint
+        run: poetry run pytest --mypy --pylint
