--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry install --dev
+          poetry install --with=dev
       - name: Test with pytest
         run: poetry run pytest --mypy --pylint
