--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,24 +2,23 @@ name: Run CI Suite
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   pytest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python 
         uses: actions/setup-python@v4
         with:
-          python-version: "3.7"
+          python-version: "3.11"
+          cache: 'poetry'
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pipenv
+        run: poetry install --with=dev
       - name: Test with pytest
-        run: |
-          pipenv install --dev
-          pipenv run pytest --mypy --pylint
+        run: poetry run pytest  # --mypy --pylint
